src/main/java/io/github/codejanovic/example/javalin/errors/NotFound.java
package io.github.codejanovic.example.javalin.errors;

public class NotFound extends UsecaseError {
    public NotFound(String message) {
        super(message);
    }

}
